<resources>

    <string name="app_name">HumHub</string>
    <string name="app_payoff">Community</string>

    <!-- If you want to use RTL (right to left) version, set true -->
    <string name="rtl_version" translatable="false">false</string>

    <!-- Splash screen delay (milliseconds) 1500 = 1,5 seconds -->
    <string name="splash_delay" translatable="false">1500</string>

    <!-- Google Analytics OPTIONAL -->
    <string name="analytics_property_id" translatable="false"></string>

    <!-- For use GCM you need to set your Google Api Project Number -->
    <string name="google_api_sender_id" translatable="false"></string>

    <!-- For use Google Maps you need to set your Google Maps API Key -->
    <string name="gmap_key" translatable="false"></string>
    <string name="coordinate_lat" translatable="false">40.708105</string>
    <string name="coordinate_long" translatable="false">-74.006307</string>

    <!-- Server to register token (for push notification) OPTIONAL -->
    <string name="db_field_token" translatable="false">user_android_token</string>
    <string name="db_field_latitude" translatable="false">user_lat</string>
    <string name="db_field_longitude" translatable="false">user_lon</string>
    <string name="db_field_appversion" translatable="false">user_app_version</string>
    <string name="server_url" translatable="false"></string>

    <!-- AD Mob Publusher ID -->
    <string name="admob_interstiial_delay" translatable="false">20000</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-4749346084032970/6631537051</string>

    <!-- Share text and link for Share Button -->
    <string name="share_text">Hello, look what a beautiful app that I found here: </string>
    <string name="share_link">https://www.humhub.org</string>



    <!-- ######################################### Page Configs ################################## -->

    <!-- Type: "url" for web remote pages, "file" for local pages -->
    <string name="home_label">Dashboard</string>
    <string name="home_type">url</string>
    <string name="home_url">https://community.humhub.com/dashboard</string>

    <string name="people_label">People</string>
    <string name="people_type">url</string>
    <string name="people_url">https://community.humhub.com/directory/members</string>

    <string name="messages_label">Messages</string>
    <string name="messages_type">url</string>
    <string name="messages_url">https://community.humhub.com/mail/mail/index</string>

    <string name="faq_label">Faq</string>
    <string name="faq_type">url</string>
    <string name="faq_url">https://community.humhub.com/p/1</string>

    <string name="documentation_label">Documentation</string>
    <string name="documentation_type">url</string>
    <string name="documentation_url">https://community.humhub.com/p/2</string>

    <string name="second_category">Options</string>
    <string name="settings_label">Settings</string>

    <string name="logout_label">Logout</string>
    <string name="logout_type">url</string>
    <string name="logout_url">https://community.humhub.com/user/auth/logout</string>

    <!-- Search button-->
    <string name="search_label">Search</string>
    <string name="search_type">url</string>
    <string name="search_url">https://community.humhub.com/search</string>

    <!-- If you want, you can customize the error page! -->
    <string name="error_page">error.html</string>

    <!--BOTTOM BAR ACTION STRING-->
    <!--Home is connect by primary link-->
    <string name="spaces_label">Spaces</string>
    <string name="spaces_type">url</string>
    <string name="spaces_url">https://community.humhub.com/directory/spaces</string>

    <string name="notification_label">Notification</string>
    <string name="notification_type">url</string>
    <string name="notification_url">https://community.humhub.com/notification/overview</string>

    <!-- ########################################## STRINGS ######################################  -->
    <!-- String for translate -->
    <string name="share">Share</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">WebView Settings</string>

    <string name="pref_title_cache">Enable Cache</string>
    <string name="pref_title_javascript">Enable Javascript</string>
    <string name="pref_title_geolocation">Update GPS Coordinates</string>
    <string name="pref_title_gps_remoember">GPS Check Dialog</string>

    <string name="pref_title_webview_loader">Loader option</string>
    <string-array name="pref_webview_loader_titles">
        <item>Pull-to-Refresh</item>
        <item>Progress Dialog</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_webview_loader_values">
        <item>pull</item>
        <item>dialog</item>
        <item>never</item>
    </string-array>

    <!-- GPS -->
    <string name="gps_dialog_title">Geo-based push (optional)</string>
    <string name="gps_dialog_message">Do you want receive Geo Push notifications?</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_header_geolocation">Geolocation</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
